New social links

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 logo                     : "/assets/unrealgarden_logotype-white.svg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.webp"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 discord_url              : https://discord.unreal-garden.com/
+bsky_url                 : https://bsky.app/profile/unreal-garden.com
+mastodon_url             : https://mastodon.gamedev.place/@unrealgarden
 
 search                   : true
 search_full_content      : true
