--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "UE-Specifier-Docs"]
 	path = assets/data/UE-Specifier-Docs
 	url = https://github.com/benui-dev/UE-Specifier-Docs
+[submodule "assets/data/UE-Specifier-Docs"]
+	path = assets/data/UE-Specifier-Docs
+	url = https://github.com/unreal-garden/UE-Specifier-Docs
